# test_case_generation

./: .gitignore  config.ini  config.py  main.py  output.txt  output2.txt  pyproject.toml  requirements.txt  t.py
app/: utils.py
app/common/database/: database.py
app/data/: config.py
app/prompts/: database_query_file.py  requirement_extraction_prompts.py  test_cases_prompts.py
app/router/: router_utils.py  test_case_generator_router.py
app/scehma/: schemas.py
test_cases_app/: utils.py
test_cases_app/common/database/: database.py  mongo_database.py
test_cases_app/common/embeddings/: azure_embeddings.py
test_cases_app/data/: config.py
test_cases_app/prompts/: requirement_extraction.py  requirement_extraction_prompt.py  test_cases.py  test_cases_prompt.py
test_cases_app/router/: router_utils.py  test_case_generator_router.py
test_cases_app/scehma/: schemas.py
test_cases_app/schema/: schemas.py
test_cases_app/utils/: llm_utils.py  utils.py
